hphp/test/zend/good/ext/openssl/tests/bug54061.php.skipif
<?php if (!extension_loaded("openssl")) die("skip"); ?>