hphp/test/zend/bad/ext/phar/tests/bug54395.php.skipif
<?php if (!extension_loaded("phar")) die("skip"); ?>